# stonkks

./: Cargo.toml  README.md  index.html
next_rs_macro/: Cargo.toml
next_rs_traits/: Cargo.toml
next_rs_traits/src/: api.rs  layout.rs  lib.rs  pages.rs  pointers.rs  props.rs  ressources.rs  routes.rs
src/: api.rs  app.rs  client.rs  default.rs  lib.rs  pages.rs  server.rs  utils.rs
stonkks-core/: Cargo.toml
stonkks-core/src/: api.rs  layout.rs  lib.rs  pages.rs  pointers.rs  routes.rs  states.rs
stonkks-core/src/response/: mod.rs
stonkks-macro/: Cargo.toml
stonkks_macro/: Cargo.toml
stonkks_traits/: Cargo.toml
stonkks_traits/src/: api.rs  lib.rs  pages.rs  props.rs  ressources.rs
test-client/: Cargo.toml
test-client/src/: counter.rs  index.rs  lib.rs  main.rs
test-server/: .gitignore  Cargo.toml  build.rs
test-server/src/: main.rs
test-server/src/routes/: counter.rs  hello.rs
test-server/src/states/: counter.rs
tests/ssr/: main.rs
