[package]
name = "next_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
sycamore = "0.8.2"
next_rs_macro = { path = "./next_rs_macro" }
next_rs_traits = { path = "./next_rs_traits" }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }

[workspace]
members = [
    "next_rs_macro",
    "next_rs_traits"
]

[[test]]
name = "ssr"
