[package]
name = "stonkks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
sycamore = "0.8.2"
stonkks_macro = { path = "./stonkks_macro" }
stonkks-core = { path = "./stonkks-core" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
web-sys = { version = "0.3.60", features = ["Location", "Window"] }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }

[workspace]
members = [
    "stonkks_macro",
    "stonkks-core",
    "test-client",
    "test-server"
]

[[test]]
name = "ssr"
