[package]
name = "stonkks-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
sycamore = { version = "0.8.2", features = ["ssr"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
