[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
next_rs = { path = "../../next_rs" }
rocket = "0.5.0-rc.2"
async-trait = "0.1.60"
test-client = { path = "../test-client" }

